--- a/css/style.css
+++ b/css/style.css
@@ -1333,85 +1333,227 @@ body{
 
 
 /*GAME.HTML STYLES*/
-.video-background {
-  position: fixed;
+.video-container{
+  display: flex;
+  justify-content: center;
+  background-color: #FFFFFF;
+  width: 100%;
+  height: 44vw;
+  margin-top: 5px;
+  overflow: hidden;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 4px 12px;
+}
+.video-background video{
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
-  overflow: hidden;
+  height: auto;
+  object-fit: cover;
   z-index: -1;
 }
-
-.video-background video {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.content {
-  position: relative;
+.video-container .content{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   z-index: 1;
-  padding: 50px 20px;
-  background: rgba(255, 255, 255, 0.8);
-  display: inline-block;
-  border-radius: 10px;
-  margin-top: 50px;
+  text-align: center;
+  padding: 30px;
+  margin-top: 40px;
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-
-.content button {
-  background-color: #8b6f47;
-  color: white;
+.video-container .content h1{
+  font-size: 56px;
+  text-shadow: rgba(95, 74, 52, 0.3) 2px 2px 5px;
+}
+.step-container{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  gap: 20px;
+  padding: 40px 40px 40px 120px;
+  width: 70%;
+  height: 160px;
+  margin-bottom: 40px;
+  border: 1px solid #000000;
+}
+.game-step{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+#step-text{
+  font-size: 22px;
+  font-weight: 600;
+}
+#step-description-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: left;
+  gap: 10px;
+  margin-top: 20px;
+  width: 100%;
+}
+#step-description-container p{
+  font-size: 20px;
+  font-weight: 400;
+}
+.step-container button{
   border: none;
-  padding: 10px 20px;
   cursor: pointer;
-  font-size: 16px;
-  margin: 10px;
+  background-color: #FFFFFF;
+}
+.step-container img{
+  width: 50%;
+  height: auto;
+  object-fit: fill;
+}
+#start-playing{
+  display: block;
+  padding: 10px 30px;
+  background-color: #7A6145;
+  color: #FFFFFF;
+  border: none;
   border-radius: 5px;
+  cursor: pointer;
+  font-size: 18px;
+  transition: background-color 0.2 ease;
 }
-
-.content button:hover {
-  background-color: #6d5435;
+#start-playing:hover{
+  background-color: #5A4228;
 }
-
-#game-section {
-  margin-top: 100vh;
+/*game section styles*/
+.game-section{
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: space-between;
+  padding: 40px;
+  margin-top: 60px;
+}
+.game-section h2{
+  font-size: 28px;
+  font-weight: 600;
+}
+.vouchers-container{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 20px;
+  width: 50%;
+}
+#vouchers{
+  width: 100%;
+}
+#vouchers .voucher{
+  border: 2px solid #7A6145;
   padding: 20px;
-  background: white;
-  border-top: 5px solid #8b6f47;
+  width: 100%;
+  background: #F7F5EF;
+  margin-bottom: 20px;
 }
-
-#vouchers div {
-  border: 1px solid #ccc;
-  padding: 15px;
-  margin: 10px auto;
-  width: 80%;
-  max-width: 500px;
-  background: #f8f8f8;
-  border-radius: 5px;
+#vouchers .voucher-details{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+  font-size: 18px;
+  font-weight: 500;
 }
-
-#leaderboard {
-  width: 80%;
-  max-width: 600px;
-  margin: 20px auto;
-  border-collapse: collapse;
+.voucher button{
+  background-color: #7A6145;
+  color: #FFFFFF;
+  padding: 5px 20px;
+  border: none;
+  font-size: 18px;
+  font-weight: 400;
+  cursor: pointer;
+  transition: background-color 0.2s ease;
 }
-
-#leaderboard th, #leaderboard td {
-  border: 1px solid #ddd;
-  padding: 10px;
+.voucher button:hover{
+  background-color: #5A4228;
 }
-
-#leaderboard th {
-  background: #8b6f47;
-  color: white;
+.leaderboard-container{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 20px;
+  width: 40%;
 }
-
+.leaderboard-container table{
+  width: 100%;
+}
+#leaderboard th, #leaderboard td{
+  border: 2px solid #7A6145;
+  padding: 16px;
+}
+thead th{
+  font-size: 20px;
+  font-weight: 500;
+  text-align: left;
+}
+/*dino game section styles*/
+.dino-game-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 60px;
+  padding-top: 40px;
+  border-top: 1px solid #7A6145;
+}
+.dino-game-container h2{
+  font-size: 46px;
+  font-weight: 600;
+  margin-bottom: 20px;
+}
+.dino-game-container p{
+  font-size: 24px;
+  font-weight: 400;
+  margin-bottom: 30px;
+}
+#dino-game {
+  position: relative;
+  padding: 20px;
+  width: 100%;
+}
 #board {
-  background-image: url('../images/game/dino-background.png');
+  background-color: #FFFFFF;
   background-size: cover;
   background-position: center;
-  padding: 40px;
-  width: 80%;
+  width: 100%;
+  border-radius: 10px;
+  border: 2px solid #000000;
+  display: block;
+}
+#dino-game button{
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 8px 20px;
+  font-size: 16px;
+  background-color: #FFFFFF;
+  color: #000000;
+  border: 1px solid #000000;
+  cursor: pointer;
+  border-radius: 5px;
+}
+#startGameBtn{
+  top: 48%;
+}
+#restartGameBtn{
+  top: 60%;
+  display: none;
+}
+#dino-game button:hover{
+  background-color: #7A6145;
+  color: #FFFFFF;
 }
